@@ -1,0 +1,12 @@
+
+This tests that the required attribute is returned correctly through accessibility.
+
+On success, you will see a series of "PASS" messages, followed by "TEST COMPLETE".
+
+
+PASS accessibilityController.focusedElement.isRequired is true
+PASS accessibilityController.focusedElement.isRequired is false
+PASS successfullyParsed is true
+
+TEST COMPLETE
+
