@@ -1,3 +1,15 @@
+2010-12-06  Chris Fleizach  <cfleizach@apple.com>
+
+        Reviewed by Oliver Hunt.
+
+        AX does not support HTML5 "required"
+        https://bugs.webkit.org/show_bug.cgi?id=50507
+
+        Test: platform/mac/accessibility/html5-required-attribute.html
+
+        * accessibility/AccessibilityRenderObject.cpp:
+        (WebCore::AccessibilityRenderObject::isRequired):
+
 2010-12-06  Alejandro G. Castro  <alex@igalia.com>
 
         Reviewed by Martin Robinson.
